<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">安益出行</string>
    <string name="title_home">抢币</string>
    <string name="title_notifications">出行</string>
    <string name="press_twice_exit">再次按返回键退出</string>
    <string name="exit_directly">直接退出</string>
    <string name="safe_exit">安全退出</string>
    <string name="action_input_phonenum">请输入手机号</string>
    <string name="action_input_code">输入验证码</string>
    <string name="action_input_pwd">请输入6-24位密码</string>
    <string name="action_input_pwd_agin">再次输入密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_forget_password">忘记密码</string>


    <string name="notifyTitle">提示</string>
    <string name="gpsNotifyMsg">当前手机扫描蓝牙需要打开定位功能。</string>
    <string name="setting">前往设置</string>
    <string name="cancel">取消</string>

    <string name="start_scan">开始扫描</string>
    <string name="stop_scan">停止扫描</string>
    <string name="expand_search_settings">展开搜索设置</string>
    <string name="retrieve_search_settings">收起搜索设置</string>
    <string name="connect_fail">连接失败</string>
    <string name="active_disconnected">断开了</string>
    <string name="disconnected">连接断开</string>
    <string name="please_open_blue">请先打开蓝牙</string>
    <string name="select_operation_type">选择操作类型</string>
    <string name="characteristic">特性</string>
    <string name="data_changed">的数据变化：</string>
    <string name="read">读</string>
    <string name="write">写</string>
    <string name="open_notification">打开通知</string>
    <string name="close_notification">关闭通知</string>
    <string name="service_list">服务列表</string>
    <string name="characteristic_list">特征列表</string>
    <string name="console">操作控制台</string>
    <string name="name">设备广播名：</string>
    <string name="mac">MAC:</string>
    <string name="service">服务</string>
    <string name="type">服务类型(主服务)</string>
    <string name="scan_setting">在下面你可以配置需要扫描的设备的条件，可以为空</string>
    <string name="setting_name">输入蓝牙设备广播名，多个之间以英文逗号隔开</string>
    <string name="setting_mac">输入蓝牙设备mac地址</string>
    <string name="setting_uuid">输入蓝牙设备UUID，多个之间以英文逗号隔开</string>
    <string name="input_hex">请输入HEX格式指令</string>
    <string name="connect">连接</string>
    <string name="connected">已连接</string>
    <string name="disconnect">断开连接</string>
    <string name="enter">进入操作</string>
    <string name="title_dashboard">商城</string>
    <string name="title_bbs">论坛</string>
    <string name="title_my">我的</string>
    <string name="wallet">我的钱包</string>
    <string name="all_order">全部订单</string>
    <string name="driving_score">驾驶评分</string>
    <string name="my_ranking">我的排名</string>
    <string name="history">历史记录</string>
    <string name="real_name">实名认证</string>
    <string name="my_favorite">我的收藏</string>
    <string name="my_manager">设备管理</string>
    <string name="my_device_list">设备列表</string>
    <string name="action_regist">立即注册</string>
    <string name="phone_emp">账号不能为空</string>
    <string name="get_ag">秒</string>
    <string name="action_get_code">获取验证码</string>
    <string name="title_activity_regist">注册</string>
    <string name="change_pwd">修改密码</string>
    <string name="equipment_info">设备信息</string>
    <string name="memory_management">内存管理</string>
    <string name="air_upgrade">空中升级</string>

    <string name="shoppingcat">购物车</string>
    <string name="actionBar_edit">编辑</string>
    <string name="all">全选</string>
    <string name="order_total">合计 :</string>

    <string name="spd" />
    <string name="original_y" />
    <string name="isUp" />
    <string name="acc_info">账号信息</string>
    <string name="app_exit">再按一次退出程序</string>

</resources>
