<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rlyt_history"
                style="@style/comm_style"
                android:layout_marginTop="@dimen/margin5"
                android:clickable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:drawablePadding="@dimen/margin10"
                    android:drawableRight="@mipmap/ic_next"
                    android:gravity="center_vertical"
                    android:text="@string/history"
                    android:textSize="@dimen/font_normal_14" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@color/view_line"
                android:layout_height="1dp" />

            <RelativeLayout
                android:id="@+id/rlyt_equipment_info"
                style="@style/comm_style"
                android:clickable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:drawablePadding="@dimen/margin10"
                    android:drawableRight="@mipmap/ic_next"
                    android:gravity="center_vertical"
                    android:text="@string/equipment_info"
                    android:textSize="@dimen/font_normal_14" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@color/view_line"
                android:layout_height="1dp" />

            <RelativeLayout
                android:id="@+id/rlyt_memory_management"
                style="@style/comm_style"
                android:clickable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:drawablePadding="@dimen/margin10"
                    android:drawableRight="@mipmap/ic_next"
                    android:gravity="center_vertical"
                    android:text="@string/memory_management"
                    android:textSize="@dimen/font_normal_14" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@color/view_line"
                android:layout_height="1dp" />

            <RelativeLayout
                android:id="@+id/rlyt_air_upgrade"
                style="@style/comm_style"
                android:clickable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:drawablePadding="@dimen/margin10"
                    android:drawableRight="@mipmap/ic_next"
                    android:gravity="center_vertical"
                    android:text="@string/air_upgrade"
                    android:textSize="@dimen/font_normal_14" />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>