<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@mipmap/ic_my_bg">

                <ImageView
                    android:id="@+id/iv_head"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_head" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_head"
                    android:layout_marginTop="@dimen/margin5"
                    android:gravity="center"
                    android:text="123123" />
            </RelativeLayout>


            <RelativeLayout
                style="@style/comm_style"
                android:clickable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableLeft="@mipmap/ic_wallet"
                    android:drawablePadding="@dimen/margin10"
                    android:drawableRight="@mipmap/ic_next"
                    android:gravity="center_vertical"
                    android:text="@string/wallet"
                    android:textSize="@dimen/font_normal_14" />
            </RelativeLayout>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin5" />

            <LinearLayout
                style="@style/comm_style"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="13" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="13" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="13" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="13" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="13" />
            </LinearLayout>

            <LinearLayout
                style="@style/comm_style"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="金币" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="钻石" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="银币" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="我的积分" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="我的余额" />
            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin5" />

            <RelativeLayout
                android:id="@+id/llyt_all_orders"
                style="@style/comm_style"
                android:clickable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableLeft="@mipmap/ic_all_orders"
                    android:drawablePadding="@dimen/margin10"
                    android:drawableRight="@mipmap/ic_next"
                    android:gravity="center_vertical"
                    android:text="@string/all_order"
                    android:textSize="@dimen/font_normal_14" />
            </RelativeLayout>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <RelativeLayout
                android:id="@+id/rlyt_shop_cart"
                style="@style/comm_style"
                android:clickable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableLeft="@mipmap/ic_shopping_cart"
                    android:drawablePadding="@dimen/margin10"
                    android:drawableRight="@mipmap/ic_next"
                    android:gravity="center_vertical"
                    android:text="购物车"
                    android:textSize="@dimen/font_normal_14" />
            </RelativeLayout>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin5" />

            <RelativeLayout
                android:id="@+id/rlyt_dri_score"
                style="@style/comm_style"
                android:clickable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:drawableLeft="@mipmap/ic_driving_score"
                    android:drawablePadding="@dimen/margin10"
                    android:drawableRight="@mipmap/ic_next"
                    android:gravity="center_vertical"
                    android:text="@string/driving_score"
                    android:textSize="@dimen/font_normal_14" />
            </RelativeLayout>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <RelativeLayout
                android:id="@+id/rlyt_my_rank"
                style="@style/comm_style"
                android:clickable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableLeft="@mipmap/ic_my_ranking"
                    android:drawablePadding="@dimen/margin10"
                    android:drawableRight="@mipmap/ic_next"
                    android:gravity="center_vertical"
                    android:text="@string/my_ranking"
                    android:textSize="@dimen/font_normal_14" />
            </RelativeLayout>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <RelativeLayout
                android:id="@+id/rlyt_his_rec"
                style="@style/comm_style"
                android:clickable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableLeft="@mipmap/ic_history"
                    android:drawablePadding="@dimen/margin10"
                    android:drawableRight="@mipmap/ic_next"
                    android:gravity="center_vertical"
                    android:text="@string/history"
                    android:textSize="@dimen/font_normal_14" />
            </RelativeLayout>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin5" />

            <RelativeLayout
                android:id="@+id/rlyt_anth"
                style="@style/comm_style"
                android:clickable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableLeft="@mipmap/ic_real_name"
                    android:drawablePadding="@dimen/margin10"
                    android:drawableRight="@mipmap/ic_next"
                    android:gravity="center_vertical"
                    android:text="@string/real_name"
                    android:textSize="@dimen/font_normal_14" />
            </RelativeLayout>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <RelativeLayout
                android:id="@+id/rlyt_my_favorite"
                style="@style/comm_style"
                android:clickable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableLeft="@mipmap/ic_my_favorite"
                    android:drawablePadding="@dimen/margin10"
                    android:drawableRight="@mipmap/ic_next"
                    android:gravity="center_vertical"
                    android:text="@string/my_favorite"
                    android:textSize="@dimen/font_normal_14" />
            </RelativeLayout>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <RelativeLayout
                android:id="@+id/rlyt_my_device_list"
                style="@style/comm_style"
                android:clickable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:drawableLeft="@mipmap/ic_my_manager"
                    android:drawablePadding="@dimen/margin10"
                    android:drawableRight="@mipmap/ic_next"
                    android:gravity="center_vertical"
                    android:text="@string/my_manager"
                    android:textSize="@dimen/font_normal_14" />
            </RelativeLayout>

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

</LinearLayout>